[tool.poetry]
name = "restaurant-generator"
version = "0.1.0"
description = ""
authors = ["vaibhavsanap <vabhi42@gmail.com>"]
readme = "README.md"
packages = [{include = "restaurant_generator"}]

[tool.poetry.dependencies]
python = "^3.11"
openai = "^0.27.8"
langchain = "^0.0.265"
google-search-results = "^2.4.2"
streamlit = "^1.25.0"
cohere = "^4.20.1"
huggingface-hub = "^0.16.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
